julian-reyes.github V.2
Updated design and layout for the homepage and projects page. Homepage is no longer one page; it scrolls with info contained on a standard resume (highlights, education, experience) with a short description for each. note: I still need to update text descriptions for each project.

--- a/index.html
+++ b/index.html
@@ -1,76 +1,281 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Spatial by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-<head>
-  <title>Julian Reyes</title>
+	<head>
+		<title>Spatial by TEMPLATED</title>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<link rel="stylesheet" href="assets/css/main.css"/>
+		<!-- <link rel="stylesheet" href="assets_urban/css/main.css" /> -->
 
-  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://kit.fontawesome.com/7529a9a100.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,700,700i,800,800i|Source+Sans+Pro:300i,400,600,700,900&display=swap" rel="stylesheet">
-<!-- <link rel="stylesheet" href="gallery.css"> -->
-<link rel="stylesheet" href="Julian.css">
-</head>
-<body>
+	</head>
+	<body class="landing">
 
-
-  <!-- <div class="container"> -->
-    <div style="padding-left: 75px;" class="jumbotron">
-      <h1> <i class="fas fa-laptop-code"></i> Julian Reyes</h1>
-      <h4>UC Davis - Computer Science; Neurobiology, Physiology and Behavior</h4>
-    </div>
-  <!-- </div> -->
-
-  <nav style="width: 100%;" class="navbar navbar-inverse">
-    <div  class="container">
-
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
-      <a href="#" class="navbar-brand"> <i class="fas fa-home"></i></span> Home</a>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-    <ul class="nav navbar-nav">
-      <!-- <li class="disabled"> <a href="#"><i class="far fa-address-card"></i> About</a> </li> -->
-      <!-- <li class="disabled"> <a href="#"><i class="far fa-address-book"></i> Contact</a> </li> -->
-      <li> <a href="projects.html"> <i class="fas fa-layer-group"></i> Projects <i class="fab fa-connectdevelop"></i></a></li>
-      <li> <a href="https://www.linkedin.com/in/julian-reyes-1b2727190/"> <i class="fab fa-linkedin"></i> LinkedIn </a></li>
+		<!-- Header -->
+			<header id="header" class="alt">
+				<h1><strong><a class="link" href="index.html">Home</a></strong> <a class="link"style="padding-left: 15px;" href="https://www.linkedin.com/in/julian-reyes-1b2727190/">LinkedIn</a><a class="link link_samepage" href="#highlights" style="margin-left:20px;">Highlights</a> <a class="link link_samepage" style="margin-left: 20px;" href="#experience">Experience</a></h1>
+				<li> </li>
 
 
-    </ul>
+				<nav id="nav">
+					<ul>
+						<li><a  class="link" href="index_retrospect.html">Projects</a></li>
+						<li><a  class="link link_samepage" href="#bio">Summary</a></li>
+						<!-- <li><a  class="link link_samepage" href="#">Bio</a></li> -->
+						<li><a class="link" href="resume.html">Resume</a></li>
+					</ul>
+				</nav>
+			</header>
 
-    <ul class="nav navbar-nav navbar-right">
-      <!-- <li class="disabled"> <a href="#"><i class="far fa-file-alt"></i> Cover Letter</a></li> -->
-      <li> <a href="resume.html"><i class="far fa-id-badge"></i> Resume</a> </li>
-    </ul>
-  </div>
-  </div>
+			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
-  </nav>
-  <!-- <a href="http://sites.google.com" title="Google Sites - free websites and wikis"><img src="http://www.google.com/a/help/intl/en/images/sites_35.gif" border="0" alt="Google Sites"></a> -->
+		<!-- Banner -->
+			<section id="banner">
+				<h2>Julian Reyes</h2>
+				<p>UC Davis - Computer Science; Neurobiology, Physiology and Behavior <br /> Web Developer, Software Developer</p>
+				<ul class="actions">
+					<li><a href="index_retrospect.html" class="button special big">Projects</a></li>
+				</ul>
+			</section>
+
+			<!-- One -->
+				<section id="one" class="wrapper style1">
+					<div class="container 75%">
+						<div class="row 200%">
+							<div class="6u 12u$(medium)">
+								<header class="major">
+									<h2>Personal Summary</h2>
+									<p>Perceptive, Creative, Independent</p>
+								</header>
+							</div>
+							<div class="6u$ 12u$(medium)">
+								<p id="bio">Dedicated, motivated, bilingual individual
+							    highly regarded with progressive, diverse experience in full stack web development,
+							    data structures & algorithms, bioinformatics, information processing, machine learning,
+							    and life sciences. My goal is to deliver custom software solutions to meet complex
+							    business requirements in competitive markets. Respected as a motivational, influential,
+							    and detail-oriented leader and collaborator who guides team members in achieving on-time,
+							    budget-conscious project completion while exceeding all expectations. Builds and maintains
+							    productive professional relationships with colleagues and clients, driving business
+							    objectives through a people-focused approach. </p>
+								<p>Exceptional academic qualifications include a
+								Bachelor of Science in Neurobiology, Physiology, and Behavior and a Minor in Computer Science
+								from the University of California – Davis. Out-of-the-box thinker committed to implementing
+								continuous process improvements to enable growth.</p>
+								I look forward to meeting you; You can reach me at julian.edward.reyes@gmail.com
+							</div>
+						</div>
+					</div>
+				</section>
+
+			<!-- Two -->
+				<section id="two" class="wrapper style2 special">
+					<div class="container">
+						<header class="major">
+							<h2>Education</h2>
+							<p>Highschool, University</p>
+						</header>
+						<div class="row 150%">
+							<div class="6u 12u$(xsmall)">
+								<div class="image fit captioned">
+									<img src="images/pic02.jpg" alt="" />
+									<h3>Westview - San Diego, CA</h3>
+
+								</div>
+							</div>
+							<div class="6u$ 12u$(xsmall)">
+								<div class="image fit captioned">
+									<img src="images/pic03.jpg" alt="" />
+									<h3>UC Davis - Davis, CA</h3>
+								</div>
+							</div>
+						</div>
+						<ul class="actions">
+							<li><a href="https://www.linkedin.com/in/julian-reyes-1b2727190/" class="button special big">LinkedIn</a></li>
+							<li><a href="resume.pdf" class="button big">Resume</a></li>
+						</ul>
+					</div>
+				</section>
+
+			<!-- Three -->
+				<section id="three" class="wrapper style1">
+					<div class="container">
+						<header class="major special">
+							<h2 id="highlights">Selected Highlights</h2>
+							<p>Featured Skills of Interest</p>
+						</header>
+						<div class="feature-grid">
+							<div class="feature">
+								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<h4>JavaScript Expert</h4>
+										<p>React, Node.JS, JQuery, Express</p>
+									</header>
+									<p>Client-Side and Backend JavaScript developer, experienced with creating full-scale JavaScript based mobile and web applications.</p>
+								</div>
+							</div>
+							<div class="feature">
+								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<h4>Front End Designer and Developer</h4>
+										<p>HTML, CSS, and helper libraries</p>
+									</header>
+									<p>As an experienced front end web developer and designer, I am dedicated to helping make your creative ideas come to life.</p>
+								</div>
+							</div>
+							<div class="feature">
+								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<h4>Backend/Server and API Expert</h4>
+										<p>XML, JSON, req/res, etc.</p>
+									</header>
+									<p>Experienced in backend JavaScript as well as API request and response handling for data management.</p>
+								</div>
+							</div>
+							<div class="feature">
+								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<h4>Data Structure and Algorithm Expert</h4>
+										<p>Python, C, C#, JavaScript</p>
+									</header>
+									<p>As an expert in Computation Theory, pointers, and technical computer science disciplines, I have a strong understanding of computer science and programming.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 
 
-<div style="padding-left: 100px;padding-right: 100px;" class="container2">
-  <h1 class="text-center">Summary</h1>
-
-<div  style="padding-left: 100px;padding-right: 100px; " class="jumbotron">
-  <p style="font-size: 1.2em;">    Dedicated, motivated bilingual Bioinformatician highly regarded progressive, diverse experience in full stack web development, computer programming, bioinformatics, information processing, machine learning, and life sciences. My goal is to deliver custom software solutions to meet complex business requirements in competitive markets. Respected as a motivational, influential, and detail-oriented leader and collaborator who guides team members in achieving on-time, budget-conscious project completion while exceeding all expectations. Builds and maintains productive professional relationships with colleagues and clients, driving business objectives through a people-focused approach. Exceptional academic qualifications include a Bachelor of Science in Neurobiology, Physiology, and Behavior and a Minor in Computer Science from the University of California – Davis. Out-of-the-box thinker committed to implementing continuous process improvements to enable growth.</p>
-
-I look forward to meeting you; You can reach me at julian.edward.reyes@gmail.com
-</div>
-</div>
 
 
 
 
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-</body>
+				<section>
+					<div style="width: 100%; margin-top: 40px;" class="">
+						<div style="text-align: center;" class="container">
+								<h1 id="experience" style="font-size: 3.1em;">Experience</h1>
+						</div>
+					</div>
+				</section>
+
+				<section>
+					<div style="padding-top: 30px; padding-bottom: 60px;" class="container">
+					<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="">
+								<img style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic02.jpg" alt="">
+						</div>
+						<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
+							<h3 style="text-align: right;"> <strong> Full Stack Web Developer at Unearth Campaigns</strong></h3>
+							<p>Currently employed as a full stack web engineer for Unearth Campaigns based out of Downtown Sacramento, helping on mostly backend JavaScript and PHP and client side HTML, JavaScript, and CSS.</p>
+							<p style="text-align: right;"> <em>August 2019 - Current</em> </p>
+						</div>
+					</div>
+				</div>
+				</section>
+
+				<section>
+					<div style="padding-bottom: 60px;" class="container">
+					<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+						<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
+							<h3><strong>Video Game Developer</strong></h3>
+							<p>  Creating 4 solo projects and one full-scale multi-player final project game with a team of 5, I created video games using Unity game engine software</p>
+							<p> <em>UC Davis - June 2018 - December 2018</em> </p>
+						</div>
+						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="">
+								<img style="margin: auto; width: 100%; border-radius: 20px;" src="images/pic01.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				</section>
+
+				<section>
+					<div style="padding-bottom: 60px;" class="container">
+					<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="">
+								<img style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic03.jpg" alt="">
+						</div>
+						<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
+							<h3 style="text-align: right;"><strong>Bioinformatician, Machine Learning</strong></h3>
+							<p> Knowledgable on the basis of machine learning and have made dynamic programs that analyze DNA sequences. </p>
+							<p style="text-align: right;"> <em>UC Davis - Fall 2018</em> </p>
+						</div>
+					</div>
+				</div>
+				</section>
+
+				<section>
+					<div style="padding-bottom: 45px;" class="container">
+					<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+						<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
+							<h3><strong>Lead Developer for various side projects</strong></h3>
+							<p>  Working in collaboration in teams of 2-4, I am currently working on multiple projects, including a music application platform as well as a large-scale food waste management mobile application</p>
+							<p> <em>June 2018 - December 2018</em> </p>
+						</div>
+						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="">
+								<img style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic02.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				</section>
+
+
+			<!-- Four -->
+				<section style="margin-bottom: 60px;" id="four" class="wrapper style3 special">
+
+					<div  class="container">
+						<header class="major">
+							<h2>Thank You for Visiting!</h2>
+							<p>I hope we can collaborate soon on future projects</p>
+						</header>
+						<ul class="actions">
+							<li><a href="https://www.linkedin.com/in/julian-reyes-1b2727190/" class="button special big">Get in touch!</a></li>
+						</ul>
+					</div>
+				</section>
+
+		<!-- Footer -->
+			<!-- <footer id="footer">
+				<div class="container">
+					<ul class="icons">
+						<li><a href="#" class="icon fa-facebook"></a></li>
+						<li><a href="#" class="icon fa-twitter"></a></li>
+						<li><a href="#" class="icon fa-instagram"></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Untitled</li>
+						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+					</ul>
+				</div>
+			</footer> -->
+
+		<!-- Scripts -->
+		
+		<script type="text/javascript">
+		document.querySelectorAll('.link_samepage').forEach(anchor => {
+		    anchor.addEventListener('click', function (e) {
+		        e.preventDefault();
+
+		        document.querySelector(this.getAttribute('href')).scrollIntoView({
+		            behavior: 'smooth'
+        });
+    });
+});
+			
+		</script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
