Media Query for photos
Changes display to none for photos on mobile using a media query. note: need to move everything into css classes.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Spatial by TEMPLATED</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css"/>
 		<!-- <link rel="stylesheet" href="assets_urban/css/main.css" /> -->
 
@@ -170,8 +171,8 @@
 				<section>
 					<div style="padding-top: 30px; padding-bottom: 60px;" class="container">
 					<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
-						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="">
-								<img style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic02.jpg" alt="">
+						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
+								<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic02.jpg" alt="">
 						</div>
 						<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
 							<h3 style="text-align: right;"> <strong> Full Stack Web Developer at Unearth Campaigns</strong></h3>
@@ -190,8 +191,8 @@
 							<p>  Creating 4 solo projects and one full-scale multi-player final project game with a team of 5, I created video games using Unity game engine software</p>
 							<p> <em>UC Davis - June 2018 - December 2018</em> </p>
 						</div>
-						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="">
-								<img style="margin: auto; width: 100%; border-radius: 20px;" src="images/pic01.jpg" alt="">
+						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
+								<img class="test" style="margin: auto; width: 100%; border-radius: 20px;" src="images/pic01.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -200,8 +201,8 @@
 				<section>
 					<div style="padding-bottom: 60px;" class="container">
 					<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
-						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="">
-								<img style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic03.jpg" alt="">
+						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
+								<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic03.jpg" alt="">
 						</div>
 						<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
 							<h3 style="text-align: right;"><strong>Bioinformatician, Machine Learning</strong></h3>
@@ -214,14 +215,14 @@
 
 				<section>
 					<div style="padding-bottom: 45px;" class="container">
-					<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
-						<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
+					<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container test3">
+						<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="test2">
 							<h3><strong>Lead Developer for various side projects</strong></h3>
 							<p>  Working in collaboration in teams of 2-4, I am currently working on multiple projects, including a music application platform as well as a large-scale food waste management mobile application</p>
 							<p> <em>June 2018 - December 2018</em> </p>
 						</div>
-						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="">
-								<img style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic02.jpg" alt="">
+						<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
+								<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic02.jpg" alt="">
 						</div>
 					</div>
 				</div>
