Updated Projects Page
Put actual descriptions for each project instead of the default Lorem Ipsum text.

--- a/index_retrospect.html
+++ b/index_retrospect.html
@@ -54,7 +54,8 @@
 						<div class="content">
 							<!-- <a href="heartdata/index.html"> -->
 							<h2>Heart Data Visualization</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>• Spearheaded the analysis of Heart Disease data in individuals age 30-69 using Statistical Analysis Methods and Statistical Algorithmic Functions.</p>
+<p>• Potential to be used by healthcare professionals to analyze health disease trends in various demographics of individuals.</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="heartdata/index.html" class="">More</a>
@@ -69,7 +70,7 @@
 						<div class="content">
 							<!-- <a href="JuliansDetailing.html"> -->
 							<h2>Automotive Detailing Website</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>Website mockup for an automotive detailing site, that I personally designed and implemented</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="JuliansDetailing.html" class="">More</a>
@@ -84,7 +85,7 @@
 						<span class="image"><img src="JDM2.png" alt="" /></span>
 						<div class="content">
 							<h2>Museum of JDM</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>Website design implementation. Made using Bootstrap, JavaScript, HTML, and CSS</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="JDM_5/index.html" class="">More</a>
@@ -97,8 +98,7 @@
 						<span class="image"><img style="height: 350px;" src="music.png" alt="" /></span>
 						<div class="content">
 							<h2>Cosignr: Music Information Platform</h2>
-
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>Landing page mockup for a music information platform. Still in early stages. Version 2 coming soon</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="CoSign/home.html" class="">More</a>
@@ -114,7 +114,7 @@
 						<span class="image"><img src="maintenance.png" alt="" /></span>
 						<div class="content">
 							<h2>My Own Personal Website</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>Live domain name hosted by Amazon AWS for my own personal website. Previous detailing project will be live here when complete.</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="http://www.juliansautodetailing.com/" class="">More</a>
@@ -124,10 +124,10 @@
 					</article>
 
 					<article class="feature left">
-						<span class="image"><img style="height: 310px;" src="beatMaker/beat_maker.png" alt="" /></span>
+						<span class="image"><img style="height: 320px;" src="beatMaker/beat_maker.png" alt="" /></span>
 						<div class="content">
 							<h2>Beat_Maker: Music Creation Application Software</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>Beat application music software to create unique beats. Limited funcionality currently, more updates soon to come. Made using JavaScript, paper.io for animations, howlwer.io for the sound/script interaction, and HTML </p> 
 							<ul class="actions">
 								<li>
 									<a id="link" href="beatMaker/beatmaker2.html" class="t">More</a>
@@ -140,7 +140,9 @@
 						<span class="image"><img src="rgb.png" alt="" /></span>
 						<div class="content">
 							<h2>RGB Color Guessing Game</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>RGB-based color guessing game for Developers and Designers</p>
+							<p>Made using mainly JavaScript, HTML, and CSS</p>
+							
 							<ul class="actions">
 								<li>
 									<a id="link" href="colorgame.html" class="">More</a>
@@ -153,7 +155,7 @@
 						<span class="image"><img style="height: 310px;" src="game.png" alt="" /></span>
 						<div class="content">
 							<h2>My Own Video Game: 2D-Rocket League</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>With a team of five, I helped create a retro-style, multi-player sports-based video game based on the popular game, Rocket League using the Unity game engine.</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="https://julian-reyes.github.io/2D-Rocket-League/" class="">More</a>
@@ -166,7 +168,7 @@
 						<span class="image"><img src="gallery.png" alt="" /></span>
 						<div class="content">
 							<h2>Gallery</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p> Basic photo gallery style design layout. Made using Bootstrap, HTML, and CSS</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="gallery.html" class="">More</a>
@@ -179,7 +181,7 @@
 						<span class="image"><img style="height: 310px;" src="adoption.png" alt="" /></span>
 						<div class="content">
 							<h2>Landing Page</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>Landing page mockup for a pet adoption site. Bootstrap 4, HTML, CSS.</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="purrfectmatch.html" class="">More</a>
@@ -192,7 +194,7 @@
 						<span class="image"><img src="pattern.png" alt="" /></span>
 						<div class="content">
 							<h2>Gallery #2</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>Another photo gallery based website layout. Made using Bootstrap, HTML, and CSS</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="Final/index.html" class="">More</a>
