--- a/index_retrospect.html
+++ b/index_retrospect.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Retrospect by TEMPLATED</title>
+		<title>Projects - Julian Reyes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		
