--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <embed type="application/pdf" src="Web_Engineer_Resume.pdf" width="100%" height="800px;">
+    <embed type="application/pdf" src="resume.pdf" width="100%" height="800px;">
   </body>
 </html>
