--- a/projects.html
+++ b/projects.html
@@ -66,14 +66,15 @@
 					</article>
 
 					<article class="feature left">
-						<span class="image"><a href="JuliansDetailing.html"><img style="height: 310px;" src="ssws.png" alt="" /></a></span>
+						<span class="image"><a href="https://caneedsenergystorage.co"><img style="height: 310px;" src="caneedsenergy.png" alt="" /></a></span>
 						<div class="content">
 							<!-- <a href="JuliansDetailing.html"> -->
-							<h2>Automotive Detailing Website</h2>
-							<p>Website mockup for an automotive detailing site, that I personally designed and implemented</p>
+							<h2>California Needs Energy Storage</h2>
+							<p>Website made for a client while working for Unearth Campaigns</p>
+							<p>Personally implemented every front end aspect of the site</p>
 							<ul class="actions">
 								<li>
-									<a id="link" href="JuliansDetailing.html" class="">More</a>
+									<a id="link" href="https://caneedsenergystorage.com/" class="">More</a>
 								</li>
 							</ul>
 						<!-- </a> -->
@@ -82,19 +83,20 @@
 
 
 					<article class="feature right">
-						<span class="image"><img src="JDM2.png" alt="" /></span>
+						<span class="image"><img style="height: 335px;" src="flaws2.png" alt="" /></span>
 						<div class="content">
-							<h2>Museum of JDM</h2>
-							<p>Website design implementation. Made using Bootstrap, JavaScript, HTML, and CSS</p>
+							<h2>Say No to Prop 15 (Higher Property Taxes)</h2>
+							<p>Website campaign opposing prop 15 and tax increaes in California</p>
+							<p>Primarily implemented 'Flaws' and 'Read it For Yourself' pages along with various other revisions upon client request</p>
 							<ul class="actions">
 								<li>
-									<a id="link" href="JDM_5/index.html" class="">More</a>
+									<a id="link" href="https://noonprop15.org/flaw-1-hurts-farmers-and-consumers/" class="">More</a>
 								</li>
 							</ul>
 						</div>
 					</article>
 
-					<article class="feature left">
+					<!-- <article class="feature left">
 						<span class="image"><img style="height: 350px;" src="music.png" alt="" /></span>
 						<div class="content">
 							<h2>Cosignr: Music Information Platform</h2>
@@ -105,12 +107,12 @@
 								</li>
 							</ul>
 						</div>
-					</article>
+					</article> -->
 
 
 
 
-					<article class="feature right">
+					<!-- <article class="feature right">
 						<span class="image"><img src="maintenance.png" alt="" /></span>
 						<div class="content">
 							<h2>My Own Personal Website</h2>
@@ -121,7 +123,7 @@
 								</li>
 							</ul>
 						</div>
-					</article>
+					</article> -->
 
 					<article class="feature left">
 						<span class="image"><img style="height: 320px;" src="beatMaker/beat_maker.png" alt="" /></span>
