--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
 											<h3 style="text-align: right;"> <strong> Full Stack Web Developer at Unearth Campaigns</strong></h3>
 											<p>Currently employed as a full stack web engineer for Unearth Campaigns based out of Downtown Sacramento, helping on mostly backend JavaScript and PHP and client side HTML, JavaScript, and CSS.</p>
-											<p style="text-align: right;"> <em>August 2019 - Current</em> </p>
+											<p style="text-align: right;"> <em>August 2019 - June 2020</em> </p>
 										</div>
 									</div>
 								</div>
