--- a/projects.html
+++ b/projects.html
@@ -19,26 +19,27 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><a id="headerlink" href="index.html">Home</a>
-						<a id="headerlink" style="font-weight: 500;" href="https://www.linkedin.com/in/julian-reyes-1b2727190/">LinkedIn</a>
-						<a id="headerlink" style="font-weight: 500;" href="index.html#experience">Experience</a>
+				<h1><a id="headerlink" class="res2" href="index.html">Home</a>
+						<a id="headerlink" class="res2" style="font-weight: 500;" href="https://www.linkedin.com/in/julian-reyes-1b2727190/">LinkedIn</a>
+						<a id="headerlink" class="res2" style="font-weight: 500;" href="index.html#experience">Experience</a>
 				</h1>
-				<a id="headerlink" style="font-weight: 500; font-size: 1.3em;" href="index.html#highlights">Highlights</a>
-				<a id="headerlink" style="font-weight: 500; font-size: 1.3em;" href="resume.pdf">Resume</a>
+				<a id="headerlink" class="res" style="font-weight: 500; font-size: 1.3em;" href="index.html#highlights">Highlights</a>
+				<a id="headerlink" class="res" style="font-weight: 500; font-size: 1.3em;" href="resume.pdf">Resume</a>
 				<div style="text-align: center;" class="">
-					<h1 style="font-size: 2.3em; margin-right: 10px; font-weight: 500;" >Projects</h1>
+					<h1 class="" style="font-size: 2.3em; margin-right: 10px; font-weight: 500;" >Projects</h1>
 				</div>
 
 			</header>
+			<!-- <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a> -->
 
 		<!-- Nav -->
-			<nav id="nav">
+			<!-- <nav id="nav">
 				<ul style="display: none;" class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="generic.html">Generic</a></li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
-			</nav>
+			</nav> -->
 
 
 
@@ -49,7 +50,7 @@
 
 
 
-					<article class="feature right">
+					<article class="feature right project">
 						<span class="image"><a href="heartdata/index.html"><img src="heart2.png" alt="" /></a></span>
 						<div class="content">
 							<!-- <a href="heartdata/index.html"> -->
