--- a/projects.html
+++ b/projects.html
@@ -129,8 +129,8 @@
 					<article class="feature left">
 						<span class="image"><img style="height: 320px;" src="beatMaker/beat_maker.png" alt="" /></span>
 						<div class="content">
-							<h2>Beat_Maker: Music Creation Application Software</h2>
-							<p>Beat application music software to create unique beats. Limited funcionality currently, more updates soon to come. Made using JavaScript, paper.io for animations, howlwer.io for the sound/script interaction, and HTML </p> 
+							<h2>Beat_Maker: Music Creation Application <span style="font-weight: 500;">(desktop/laptop only)</span></h2>
+							<p>Beat application music software to create unique beats. Made using JavaScript, paper.io for animations, howlwer.io for the sound/script interaction, and HTML </p> 
 							<ul class="actions">
 								<li>
 									<a id="link" href="beatMaker/beatmaker2.html" class="t">More</a>
@@ -157,7 +157,7 @@
 					<article class="feature left">
 						<span class="image"><img style="height: 310px;" src="game.png" alt="" /></span>
 						<div class="content">
-							<h2>My Own Video Game: 2D-Rocket League</h2>
+							<h2>My Own Video Game: 2D-Rocket League <span style="font-weight: 500;">(desktop/laptop only)</span></h2>
 							<p>With a team of five, I helped create a retro-style, multi-player sports-based video game based on the popular game, Rocket League using the Unity game engine.</p>
 							<ul class="actions">
 								<li>
@@ -168,7 +168,7 @@
 					</article>
 
 					<article class="feature right">
-						<span class="image"><img src="gallery.png" alt="" /></span>
+						<span class="image"><img style="height: 310px;width: 100%; margin" src="galleryX.png" alt="" /></span>
 						<div class="content">
 							<h2>Gallery</h2>
 							<p> Basic photo gallery style design layout. Made using Bootstrap, HTML, and CSS</p>
@@ -194,7 +194,7 @@
 					</article>
 
 					<article class="feature right">
-						<span class="image"><img src="pattern.png" alt="" /></span>
+						<span class="image"><img src="galleryX2.png" alt="" /></span>
 						<div class="content">
 							<h2>Gallery #2</h2>
 							<p>Another photo gallery based website layout. Made using Bootstrap, HTML, and CSS</p>
