desktop/laptop only
heart data visualization disclaimer

--- a/projects.html
+++ b/projects.html
@@ -54,9 +54,9 @@
 						<span class="image"><a href="heartdata/index.html"><img src="heart2.png" alt="" /></a></span>
 						<div class="content">
 							<!-- <a href="heartdata/index.html"> -->
-							<h2>Heart Data Visualization</h2>
+							<h2>Heart Data Visualization <span style="font-weight: 500;">(desktop/laptop only)</span></h2>
 							<p>• Spearheaded the analysis of Heart Disease data in individuals age 30-69 using Statistical Analysis Methods and Statistical Algorithmic Functions.</p>
-<p>• Potential to be used by healthcare professionals to analyze health disease trends in various demographics of individuals.</p>
+							<p>• Potential to be used by healthcare professionals to analyze health disease trends in various demographics of individuals.</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="heartdata/index.html" class="">More</a>
