--- a/restaurant/template-2.html
+++ b/restaurant/template-2.html
@@ -118,7 +118,7 @@
 		<!-- CHEF'S RECCOMENDATIONS -->
 		<section style="margin: 120px 0;">
 			<div  class="container text-center">
-				<h1 class="fw-200">Chef's Reccomendations</h1>
+				<h1 class="fw-200">Chef's Recomendations</h1>
 				<div class="row">
 					<div class="col-md-4">
 						<div class="card">
