--- a/projects.html
+++ b/projects.html
@@ -88,8 +88,8 @@
 						<div class="content">
 							<!-- <a href="JuliansDetailing.html"> -->
 							<h2>California Needs Energy Storage</h2>
-							<p>Website made for a client while working for Unearth Campaigns</p>
-							<p>Personally implemented every front end aspect of the site</p>
+							<p>• Website made for a client while working for Unearth Campaigns</p>
+							<p>• Personally implemented every front end aspect of the site</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="https://caneedsenergystorage.com/" class="" target="_blank">More</a>
@@ -104,8 +104,8 @@
 						<span class="image"><img style="height: 335px;" src="flaws2.png" alt="" /></span>
 						<div class="content">
 							<h2>Say No to Prop 15 (Higher Property Taxes)</h2>
-							<p>Website campaign opposing prop 15 and tax increaes in California</p>
-							<p>Primarily implemented 'Flaws' and 'Read it For Yourself' pages along with various other revisions upon client request</p>
+							<p>• Website campaign opposing prop 15 and tax increaes in California</p>
+							<p>• Primarily implemented 'Flaws' and 'Read it For Yourself' pages along with various other revisions upon client request</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="https://noonprop15.org/flaw-1-hurts-farmers-and-consumers/" class="" target="_blank">More</a>
@@ -147,8 +147,8 @@
 						<span class="image"><img style="height: 350px;" src="cfj.png" alt="" /></span>
 						<div class="content">
 							<h2>Center For Jobs - California Buisness Round Table</h2>
-							<p>Jobs Reports for all 50 states and geopolitical sections of the United States</p>
-							<p>Created new monthly job reports, edited and updated dynamic graph images</p>
+							<p>• Jobs Reports for all 50 states and geopolitical sections of the United States</p>
+							<p>• Created new monthly job reports, edited and updated dynamic graph images</p>
 
 							<ul class="actions">
 								<li>
@@ -207,8 +207,8 @@
 						<span class="image"><img src="restaurant2.png" alt="" /></span>
 						<div class="content">
 							<h2>Custom Restaurant Theme</h2>
-							<p>Made from scratch using Bootstrap, HTML, JavaScript, and CSS</p>
-							<p>Baseline template for restarurant clients in California</p>
+							<p>• Made from scratch using Bootstrap, HTML, JavaScript, and CSS</p>
+							<p>• Baseline template for restarurant clients in California</p>
 
 							<ul class="actions">
 								<li>
@@ -223,8 +223,8 @@
 					<article class="feature left">
 						<span class="image"><img style="height: 320px;" src="beatMaker/beat_maker.png" alt="" /></span>
 						<div class="content">
-							<h2>Beat_Maker: Music Creation Application <span style="font-weight: 500;">(desktop/laptop only)</span></h2>
-							<p>Beat application music software to create unique beats. Made using JavaScript, paper.io for animations, howlwer.io for the sound/script interaction, and HTML </p>
+							<h2>• Beat_Maker: Music Creation Application <span style="font-weight: 500;">(desktop/laptop only)</span></h2>
+							<p>• Beat application music software to create unique beats. Made using JavaScript, paper.io for animations, howlwer.io for the sound/script interaction, and HTML </p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="beatMaker/beatmaker2.html" class="t" target="_blank">More</a>
@@ -237,8 +237,8 @@
 						<span class="image"><img src="rgb.png" alt="" /></span>
 						<div class="content">
 							<h2>RGB Color Guessing Game</h2>
-							<p>RGB-based color guessing game for Developers and Designers</p>
-							<p>Made using mainly JavaScript, HTML, and CSS</p>
+							<p>• RGB-based color guessing game for Developers and Designers</p>
+							<p>• Made using mainly JavaScript, HTML, and CSS</p>
 
 							<ul class="actions">
 								<li>
@@ -251,8 +251,8 @@
 					<article class="feature left">
 						<span class="image"><img style="height: 310px;" src="game.png" alt="" /></span>
 						<div class="content">
-							<h2>My Own Video Game: 2D-Rocket League <span style="font-weight: 500;">(desktop/laptop only)</span></h2>
-							<p>With a team of five, I helped create a retro-style, multi-player sports-based video game based on the popular game, Rocket League using the Unity game engine.</p>
+							<h2>• My Own Video Game: 2D-Rocket League <span style="font-weight: 500;">(desktop/laptop only)</span></h2>
+							<p>• With a team of five, I helped create a retro-style, multi-player sports-based video game based on the popular game, Rocket League using the Unity game engine.</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="https://julian-reyes.github.io/2D-Rocket-League/" class="" target="_blank">More</a>
@@ -265,7 +265,7 @@
 						<span class="image"><img style="height: 310px;width: 100%; margin" src="galleryX.png" alt="" /></span>
 						<div class="content">
 							<h2>Gallery</h2>
-							<p> Basic photo gallery style design layout. Made using Bootstrap, HTML, and CSS</p>
+							<p>• Basic photo gallery style design layout. Made using Bootstrap, HTML, and CSS</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="gallery.html" class="" target="_blank">More</a>
@@ -278,7 +278,7 @@
 						<span class="image"><img style="height: 310px;" src="adoption.png" alt="" /></span>
 						<div class="content">
 							<h2>Landing Page</h2>
-							<p>Landing page mockup for a pet adoption site. Bootstrap 4, HTML, CSS.</p>
+							<p>• Landing page mockup for a pet adoption site. Bootstrap 4, HTML, CSS.</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="purrfectmatch.html" class="" target="_blank">More</a>
@@ -291,7 +291,7 @@
 						<span class="image"><img src="galleryX2.png" alt="" /></span>
 						<div class="content">
 							<h2>Gallery #2</h2>
-							<p>Another photo gallery based website layout. Made using Bootstrap, HTML, and CSS</p>
+							<p>• Another photo gallery based website layout. Made using Bootstrap, HTML, and CSS</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="Final/index.html" class="" target="_blank">More</a>
